SHIPPING API's woooo Inventory page

--- a/api/templates/build-update-sold.html
+++ b/api/templates/build-update-sold.html
@@ -7,6 +7,7 @@
     <input type="date" min="2022-01-01" max="2030-01-01" name="date_sold">
     <input type="number" name="obj_id">
     <input type="text" name="first_name">
+    <input type="email" name="email">
     <input type="text" name="last_name">
     <input type="text" name="url">
     <button class="" type="submit">Submit</button>
