--- a/backend/static/css/inventory-forms.css
+++ b/backend/static/css/inventory-forms.css
@@ -11,12 +11,21 @@
 
 .sold-data-form {
     display: flex;
-    border: 5px solid black;
+    height: fit-content;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+    background: blueviolet;
+    box-shadow: 0 0 10px black;
 }
 
 .sold-data-form * {
-    display: grid;
-    padding: 5px;
+    display: flex;
+    margin: 5px;
+    flex-direction: column;
+    font-size: 12pt;
+    border-radius: 5px;
+    border: hidden;
 }
 
 .create-customer-form {
