SHIPPING API's woooo Inventory page

--- a/api/templates/build-update-sold.html
+++ b/api/templates/build-update-sold.html
@@ -8,6 +8,8 @@
     <input type="number" name="obj_id">
     <input type="text" name="first_name">
     <input type="email" name="email">
+    <input type="text" name="company">
+    <input type="number" name="phone_number">
     <input type="text" name="last_name">
     <input type="text" name="url">
     <button class="" type="submit">Submit</button>
