--- a/api/templates/build-update-sold.html
+++ b/api/templates/build-update-sold.html
@@ -9,7 +9,7 @@
     <input type="text" name="first_name">
     <input type="email" name="email">
     <input type="text" name="company">
-    <input type="number" name="phone_number">
+    <input type="text" name="phone_number">
     <input type="text" name="last_name">
     <input type="text" name="url">
     <button class="" type="submit">Submit</button>
