--- a/backend/static/css/inventory-forms.css
+++ b/backend/static/css/inventory-forms.css
@@ -5,7 +5,7 @@
 
 .form-group {
     display: flex;
-
+    transform: translate(-15%);
     flex-direction: row;
 }
 
@@ -26,6 +26,7 @@
     font-size: 12pt;
     border-radius: 5px;
     border: hidden;
+    max-width: 500px;
 }
 
 .create-customer-form {
@@ -46,6 +47,7 @@
     font-size: 12pt;
     border-radius: 5px;
     border: hidden;
+    max-width: 500px;
 
 }
 
