--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -208,7 +208,7 @@
                             <input type="text" name="last_name" maxlength="100" required id="id_last_name" placeholder="Enter Last Name">
                             <input type="text" name="company_name" maxlength="200" id="id_company_name" placeholder="Enter Company Name">
                             <input type="email" name="email" maxlength="254" required id="id_email" placeholder="Enter E-Mail">
-                            <input type="number" name="phone_number" required id="id_phone_number" placeholder="Enter Phone Number">
+                            <input type="text" name="phone_number" required id="id_phone_number" placeholder="Enter Phone Number">
                             <select name="original_contact" id="id_original_contact">
                                 <option value="" selected>Did this Customer Reach Out Through Website Contact Form?</option>
                                 {% for x in messages %}
