SHIPPING API's woooo Inventory page

--- a/backend/templates/inventory-comingsoon.html
+++ b/backend/templates/inventory-comingsoon.html
@@ -1,6 +1,9 @@
 {% extends 'inventory.html' %}
 {% load static %}
-{% block styles %}<link rel="stylesheet" href="{% static 'css/inventory-comingsoon.css' %}">{% endblock %}
+{% block styles %}
+    <link rel="stylesheet" href="{% static 'css/inventory-comingsoon.css' %}">
+    <link rel="stylesheet" href="{% static 'css/inventory_all.css' %}">
+{% endblock %}
 {% block title %}<title>Coming Soon - Inventory</title>{% endblock %}
 
 
