--- a/backend/templates/inventory-shipping.html
+++ b/backend/templates/inventory-shipping.html
@@ -1,6 +1,7 @@
 {% extends 'inventory.html' %}
 {% load static %}
-{% block styles %}<link rel="stylesheet" href="{% static 'css/inventory-shipping.css' %}">{% endblock %}
+{% block styles %}<link rel="stylesheet" href="{% static 'css/inventory-shipping.css' %}">
+    <link rel="stylesheet" href="{% static 'css/inventory_all.css' %}">{% endblock %}
 {% block title %}<title>Shipped Inventory</title>{% endblock %}
 
 {% block nothing %}
