--- a/backend/static/css/inventory-instock.css
+++ b/backend/static/css/inventory-instock.css
@@ -1,3 +1,6 @@
 #instock-btn {
-    color: white;
+    border: 2px solid white;
+    border-radius: 5px;
+    background: white;
+    height:30%;
 }
