SHIPPING API's woooo Inventory page

--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -76,8 +76,8 @@
                         <a href="/manager/inventory-completed?filter_by=javelin_odyssey">Javelins</a>
                     </div>
                 </div>
-                <div class="nav-links"><a class="top-nav-links" id="contact-btn" href="/manager/builder">Build Item</a></div>
-                <div class="nav-links"><a class="top-nav-links" id="contact-btn" href="/manager/contact-requests">Messages</a></div>
+                <div class="nav-links"><a class="top-nav-links" id="contact-btn" href="/manager/builder">Build/Update Item</a></div>
+                <div class="nav-links"><a class="top-nav-links" id="contact-btn" href="/manager/contact-requests">Contact Requests</a></div>
                 <div class="nav-links"><a class="top-nav-links" id="contact-btn" href="/manager/media">Media Manager</a>
                 <div class="dropdown-content">
                         <a href="###">upload</a>
