SHIPPING API's woooo Inventory page

--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -88,7 +88,12 @@
         </div>
     </div>
 </div>  <!-- END NAV BAR -->
-<div id="slide-down-menu" class="edit-options-menu"></div>
+<div id="slide-down-menu" class="edit-options-menu">
+    <button>Name</button>
+    <button>Size</button>
+    <button>FIlter Option</button>
+    <button>FIlter option</button>
+</div>
 <main>
 <div>
  <div class="left-sidebar" id="left-sidebar">
