added page title to inventory manager pages

--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -89,6 +89,8 @@
     </div>
 </div>  <!-- END NAV BAR -->
 
+<div class="manager-page-title"><h1>INVENTORY MANAGER</h1></div>
+
 <main>
 <div>
  <div class="left-sidebar" id="left-sidebar">
