manager page title in nav bar white

--- a/api/templates/build-update-sold.html
+++ b/api/templates/build-update-sold.html
@@ -11,6 +11,7 @@
     <input type="text" name="company">
     <input type="text" name="phone_number">
     <input type="text" name="last_name">
+    <input type="date" name="date_shipped">
     <input type="text" name="url">
     <button class="" type="submit">Submit</button>
 </form>
