--- a/api/templates/build-update-sold.html
+++ b/api/templates/build-update-sold.html
@@ -6,12 +6,19 @@
     <input name="purchased_by_id" type="number">
     <input type="date" min="2022-01-01" max="2030-01-01" name="date_sold">
     <input type="number" name="obj_id">
+
     <input type="text" name="first_name">
     <input type="email" name="email">
     <input type="text" name="company">
     <input type="text" name="phone_number">
     <input type="text" name="last_name">
+
     <input type="date" name="date_shipped">
+    <input type="text" name="tracking_number">
+    <input type="text" name="Shipper_info1">
+    <input type="text" name="Shipper-info2">
+
     <input type="text" name="url">
+
     <button class="" type="submit">Submit</button>
 </form>
