manager page title in nav bar white

--- a/api/templates/build-update-sold.html
+++ b/api/templates/build-update-sold.html
@@ -18,6 +18,8 @@
     <input type="text" name="Shipper_info1">
     <input type="text" name="Shipper-info2">
 
+    <input type="checkbox" name="read">
+
     <input type="text" name="url">
 
     <button class="" type="submit">Submit</button>
