--- a/backend/templates/contact-requests.html
+++ b/backend/templates/contact-requests.html
@@ -23,22 +23,6 @@
         {% if not x.read %}
             <script>
 
-            function updateContactRequests(event) {
-                event.preventDefault()
-                let my_Form = event.target
-                let my_FormData = new FormData(my_Form)
-                let xhr = new XMLHttpRequest()
-                let method = my_Form.getAttribute('method')
-                let url = my_Form.getAttribute('action')
-                xhr.responseType = 'json'
-                xhr.open(method, url)
-                xhr.onload = function () {
-                    window.location.reload()
-                }
-                my_FormData.entries()
-                xhr.send(my_FormData)
-            }
-
                 document.getElementById('message-container-{{ x.id }}').style.background = 'red'
             </script>
             <form method="post" action="/api/build-update-sold-data-api/" onsubmit="updateContactRequests(event)">
@@ -47,6 +31,23 @@
                 <input type="checkbox" name="read" checked hidden>
                 <button type="button">Mark As Read</button>
             </form>
+            <script>
+            function updateContactRequests(event) {
+
+                let my_Form = event.target
+                let my_FormData = new FormData(my_Form)
+                let xhr = new XMLHttpRequest()
+                let method = my_Form.getAttribute('method')
+                let url = my_Form.getAttribute('action')
+                xhr.responseType = 'json'
+                xhr.open(method, url)
+                xhr.onload = function () {
+                    console.log(event)
+                }
+                my_FormData.entries()
+                xhr.send(my_FormData)
+            }
+            </script>
 
         {% endif %}
     </ul></li>
