--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -92,7 +92,7 @@
 
 
 <main>
-<div>
+<div id="inventory-left-sidebar" class="inventory-sidebar">
  <div class="left-sidebar" id="left-sidebar">
     <div><a href="/manager/inventory">Inventory Home</a></div>
     <div><a href="/manager/inventory-comingsoon">Inventory Coming Soon</a></div>
