--- a/backend/static/css/inventory_all.css
+++ b/backend/static/css/inventory_all.css
@@ -38,9 +38,20 @@
     background: #f2bd1e;
 }
 
+.edit-options-menu {
+    display: flex;
+    flex-direction: column;
+}
+
 .inventory-sidebar {
     background: black;
     border-radius: 8px;
     margin-right: 5px;
     border-right: 2px solid gray;
+}
+
+.left-sidebar {
+    position: sticky;
+    top: 300px;
+    height: fit-content;
 }
