manager page title in nav bar white

--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -147,6 +147,7 @@
 
 
 {% block nothing %}
+    {% if filter %}{{ filter }}{% else %}<p>Filter: None</p>{% endif %}
 <details>
     <summary>{{ summary_title }}</summary>
 {% endblock %}
