manager page title in nav bar white

--- a/api/templates/build-update-sold.html
+++ b/api/templates/build-update-sold.html
@@ -18,7 +18,7 @@
     <input type="text" name="Shipper_info1">
     <input type="text" name="Shipper-info2">
 
-    <input type="checkbox" name="read" value="True">
+    <input type="text" name="read" value="True">
 
     <input type="text" name="url">
 
