--- a/frontend/templates/search.html
+++ b/frontend/templates/search.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block styles %}
     <link rel="stylesheet" href="{% static 'css/search.css' %}">
+    <script type="text/javascript" src="{% static 'javascript/in_stock.js' %}"></script>
 {% endblock %}
 {% block title %}
     <title>Search</title>
