manager page title in nav bar white

--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{% static 'css/admin-index-styles.css' %}">
     <link rel="stylesheet" href="{% static 'css/inventory-nav-bar.css' %}">
     <link rel="stylesheet" href="{% static 'css/inventory-forms.css' %}">
+    <link rel="stylesheet" href="{% static 'css/inventory_all.css' %}">
     {% block styles %}<link rel="stylesheet" href="{% static 'css/inventory.css' %}">{% endblock %}
     {% block title %}<title>Inventory</title>{% endblock %}
 </head>
