manager page title in nav bar white

--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -102,7 +102,9 @@
     <div><a href="/manager/inventory-shipping">Inventory Currently Shipping</a></div>
     <div><a href="/manager/inventory-completed">Completed Orders</a></div>
      <div id="slide-down-menu" class="edit-options-menu">
-    <button>Name</button>
+         {% for names in name %}
+    <button onclick="superFilter('name', {{ names.name }})">Name</button>
+         {% endfor %}
     <button>Size</button>
     <button>FIlter Option</button>
     <button>FIlter option</button>
