manager page title in nav bar white

--- a/backend/templates/inventory-comingsoon.html
+++ b/backend/templates/inventory-comingsoon.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block title %}<title>Coming Soon - Inventory</title>{% endblock %}
 
-
+<script src="{% static 'javascript/inventory-all.js' %}"></script>
 {% block nothing %}
 {% endblock %}
 {% block nothing2 %}
