--- a/backend/static/css/inventory-nav-bar.css
+++ b/backend/static/css/inventory-nav-bar.css
@@ -65,6 +65,7 @@
 
 }
 
+
 .links3 div .dropdown-content {
     display: none;
     transform: translate(-100%, -30%);
@@ -91,7 +92,7 @@
 }
 
 
-.dropdown-content a {
+.dropdown-content a, button {
   color: white;
   padding: 12px 16px;
   text-decoration: none;
@@ -103,7 +104,7 @@
     color: black
 }
 
-.dropdown-content a:hover {
+.dropdown-content button:hover {
     background: black;
     color: grey;
     border-radius: 10px;
@@ -112,9 +113,13 @@
 .nav-links:hover .dropdown-content {
     display: block;
     box-shadow: 0 0 25px #b5db1a;
-
-
 }
+
+.filter-Btn:hover .dropdown-content {
+    display: block;
+    box-shadow: 0 0 25px #b5db1a;
+}
+
 
 
 .none {
