--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -141,6 +141,7 @@
 {% endblock %}
 
 {% if filter %}{{ filter }}{% else %}<p>Filter: None</p>{% endif %}
+<div id="inventory-filtering-group" class="inventory-filtering-group">
     <div id="slide-down-menu" class="edit-options-menu">
         <button class="filter-Btn" type="button">Filter By Name</button>
         <div class="dropdown-content">
@@ -148,6 +149,7 @@
              <button type="button" onclick="superFilter('name', '{{ names.name }}')">{{ names.name }}</button>
          {% endfor %}
         </div>
+    </div>
     <button>Size</button>
     <button>FIlter Option</button>
     <button>FIlter option</button>
