manager page title in nav bar white

--- a/backend/templates/contact-requests.html
+++ b/backend/templates/contact-requests.html
@@ -43,6 +43,7 @@
                 xhr.open(method, url)
                 xhr.onload = function () {
                     console.log(event)
+                    window.location.reload()
                 }
                 my_FormData.entries()
                 xhr.send(my_FormData)
