--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -177,12 +177,12 @@
                 {% if x.sold_data %}
                     <li id="sold-data-one-{{ x.id }}">Sold Data: {{ x.sold_data }}</li>
                     {% if not x.completed_order %}
-                        <button id="update-sold-information-btn" onclick="updateInventorySoldBtns({{ x.sold_data.id }}, {{ x.id }})">Update Sold Information</button>
-                        <button id="update-customer-btn-display" onclick="updateInventoryCustomerBtns({{ x.sold_data.purchased_by.id }}, {{ x.id }})">Update Customer</button>
+                        <button id="update-sold-information-btn-{{ x.id }}" onclick="updateInventorySoldBtns({{ x.sold_data.id }}, {{ x.id }})">Update Sold Information</button>
+                        <button id="update-customer-btn-display-{{ x.id }}" onclick="updateInventoryCustomerBtns({{ x.sold_data.purchased_by.id }}, {{ x.id }})">Update Customer</button>
                         <div id="div-inventory-update" class="none">
                             <form method="POST" id="inventory-update-form" action="/api/build-update-sold-data-api/" onsubmit="updateInventorySoldData(event, {{ x.id }})" >
                             {% csrf_token %}
-                                <div id="update-inventory-change-display" class="update-inventory-change-display"></div>
+                                <div id="update-inventory-change-display-{{ x.id }}" class="update-inventory-change-display"></div>
                             </form>
                         </div>
                     {% endif %}
@@ -352,7 +352,7 @@
             </li>
             {% endif %}
             {% if x.sold_data.purchased_by %}
-                <li><hr><details><summary id="inventory-customer-data-obj-number">Customer: {{ x.sold_data.purchased_by.id }}
+                <li><hr><details><summary id="inventory-customer-data-obj-number-{{ x.id }}">Customer: {{ x.sold_data.purchased_by.id }}
                     - {{ x.sold_data.purchased_by.first_name }} {{ x.sold_data.purchased_by.last_name }}</summary><hr>
                 <ul id="customer-data-ul-{{ x.id }}">
                     <li>Name: {{ x.sold_data.purchased_by.first_name }} {{ x.sold_data.purchased_by.last_name }}</li>
