--- a/backend/templates/inventory-instock.html
+++ b/backend/templates/inventory-instock.html
@@ -1,8 +1,6 @@
 {% extends 'inventory.html' %}
 {% load static %}
-{% block styles %}<link rel="stylesheet" href="{% static 'css/inventory-instock.css' %}">
-    <link rel="stylesheet" href="{% static 'css/inventory_all.css' %}">
-{% endblock %}
+{% block styles %}<link rel="stylesheet" href="{% static 'css/inventory-instock.css' %}">{% endblock %}
 {% block title %}<title>In Stock Inventory</title>{% endblock %}
 
 {% block nothing %}
