--- a/backend/templates/inventory-sold.html
+++ b/backend/templates/inventory-sold.html
@@ -1,7 +1,6 @@
 {% extends 'inventory.html' %}
 {% load static %}
-{% block styles %}<link rel="stylesheet" href="{% static 'css/inventory-sold.css' %}">
-    <link rel="stylesheet" href="{% static 'css/inventory_all.css' %}">{% endblock %}
+{% block styles %}<link rel="stylesheet" href="{% static 'css/inventory-sold.css' %}">{% endblock %}
 {% block title %}<title>Sold Inventory</title>{% endblock %}
 
 {% block nothing %}
