--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -394,6 +394,7 @@
 </main>
 
 <script type="text/javascript" src="{% static 'javascript/inventory.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascript/inventory_all.js' %}"></script>
 
 
 </html>
