--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -154,7 +154,7 @@
         </div>
     </div>
     <div id="slide-down-menu" class="edit-options-menu">
-        <button class="filter-Btn" type="button">Filter By Name</button>
+        <button id="inventory-filter-Btn" class="filter-Btn" type="button" disabled>Filter By Name</button>
         <div class="dropdown-content">
          {% for names in name %}
              <button type="button" onclick="superFilter('name', '{{ names.name }}')">{{ names.name }}</button>
