--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -156,20 +156,24 @@
         </div>
     </div>
     <div id="slide-down-menu" class="edit-options-menu">
+    {% if filter_name %}
         <button id="inventory-filter-Btn" class="filter-Btn" type="button" style="display: none">Filter By Name</button>
         <div class="dropdown-content">
          {% for names in name %}
              <button type="button" onclick="superFilter('name', '{{ names.name }}')">{{ names.name }}</button>
          {% endfor %}
         </div>
+    {% endif %}
     </div>
     <div id="slide-down-menu-size" class="edit-options-menu">
+    {% if filter_size %}
         <button id="inventory-size-filter-Btn" class="filter-Btn" type="button">Filter By Size</button>
         <div class="dropdown-content">
              {% for sizes in size %}
                  <button type="button" onclick="superFilter('name', '{{ sizes.size }}')">{{ sizes.size }}</button>
              {% endfor %}
         </div>
+    {% endif %}
     </div>
     <button>FIlter Option</button>
     <button>FIlter option</button>
