filter buttons inventory page

--- a/backend/static/css/inventory_all.css
+++ b/backend/static/css/inventory_all.css
@@ -79,4 +79,11 @@ button {
 
 .inventory-filtering-group {
     display: flex;
+    max-width: 800px;
+    min-width: 300px;
+}
+
+.edit-options-menu .dropdown-content {
+    overflow: scroll;
+    max-height: 400px;
 }
