--- a/backend/static/css/inventory_all.css
+++ b/backend/static/css/inventory_all.css
@@ -63,7 +63,7 @@
 
 .edit-options-menu {
     display: flex;
-    margin: 10px 0 0 20%;
+    margin: 10px 0 0 25px;
 }
 
 .edit-options-menu button {
