filter buttons inventory page

--- a/backend/static/css/inventory-forms.css
+++ b/backend/static/css/inventory-forms.css
@@ -101,3 +101,13 @@
     border: hidden;
     max-width: 500px;
 }
+
+input{
+    font-size: 12pt;
+}
+
+.update-inventory-change-display div{
+    display: inline-flex;
+    position: relative;
+
+}
