filter buttons inventory page

--- a/backend/static/css/inventory-nav-bar.css
+++ b/backend/static/css/inventory-nav-bar.css
@@ -117,6 +117,10 @@
 
 }
 
+.edit-options-menu .dropdown-content {
+    transform: translate(0, 55px);
+}
+
 .edit-options-menu:hover .dropdown-content {
     display: block;
     box-shadow: 0 0 25px #b5db1a;
