--- a/backend/static/css/inventory.css
+++ b/backend/static/css/inventory.css
@@ -1,10 +1,9 @@
 #inventory-btn {
-    color: white;
-}
-
-
-#coming-soon-btn {
-    color: white;
+     border: 2px solid white;
+    border-radius: 5px;
+    background: white;
+    height:30%;
+     color: red;
 }
 
 .main-div {
