filter buttons inventory page

--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="instock-btn" href="/manager/inventory-instock/">In Stock</a>
                     <div class="dropdown-content">
-                        <a href="/manager/inventory-instock/">ALL</a>
+                        <a href="/manager/inventory-instock?display=all">ALL</a>
                         <a href="/manager/inventory-instock?filter_by_type=sport_rigs">Sport Rigs</a>
                         <a href="/manager/inventory-instock?filter_by_type=tandem">Tandem</a>
                         <a href="/manager/inventory-instock?filter_by_type=student">Student</a>
@@ -50,7 +50,7 @@
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="sold-btn" href="/manager/inventory-sold/">Sold</a>
                     <div class="dropdown-content">
-                        <a href="/manager/inventory-sold/">ALL</a>
+                        <a href="/manager/inventory-sold?display=all">ALL</a>
                         <a href="/manager/inventory-sold?filter_by_type=sport_rigs">Sport Rigs</a>
                         <a href="/manager/inventory-sold?filter_by_type=tandem">Tandem</a>
                         <a href="/manager/inventory-sold?filter_by_type=student">Student</a>
@@ -60,7 +60,7 @@
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="shipping-btn" href="/manager/inventory-shipping/">Shipping</a>
                     <div class="dropdown-content">
-                        <a href="/manager/inventory-shipping/">ALL</a>
+                        <a href="/manager/inventory-shipping?display=all">ALL</a>
                         <a href="/manager/inventory-shipping?filter_by_type=sport_rigs">Sport Rigs</a>
                         <a href="/manager/inventory-shipping?filter_by_type=tandem">Tandem</a>
                         <a href="/manager/inventory-shipping?filter_by_type=student">Student</a>
@@ -70,7 +70,7 @@
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="completed-btn" href="/manager/inventory-completed/">Completed Orders</a>
                     <div class="dropdown-content">
-                        <a href="/manager/inventory-completed/">ALL</a>
+                        <a href="/manager/inventory-completed?display=all">ALL</a>
                         <a href="/manager/inventory-completed?filter_by_type=sport_rigs">Sport Rigs</a>
                         <a href="/manager/inventory-completed?filter_by_type=tandem">Tandem</a>
                         <a href="/manager/inventory-completed?filter_by_type=student">Student</a>
