filter buttons inventory page

--- a/backend/templates/inventory.html
+++ b/backend/templates/inventory.html
@@ -161,7 +161,7 @@
             <button type="button" onclick="superFilter('type', 'student')">Student</button>
             <button type="button" onclick="superFilter('type', 'canopies')">Canopies</button>
             <button type="button" onclick="superFilter('type', 'javelin_odyssey')">Javelin Odyssey</button>
-            <button type="button" onclick="superFilter('all', 'all')">ALL</button>
+            <button type="button" onclick="superFilter('display', 'all')">ALL</button>
 
         </div>
     </div>
